jlink option --bind-services replaced with explicit --add-modules option, reducing the resulting app size significantly