@@ -94,7 +94,9 @@ task runRmi(type: JavaExec) {
 //jlink {
 //    imageName = "chinook-local" + "-" + project.version
 //    configuration = 'runtimeLocal'
-//    options = ['--bind-services', '--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+//    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages', '--add-modules',
+//               'is.codion.framework.db.local,is.codion.dbms.h2database,' +
+//                       'is.codion.plugin.logback.proxy,is.codion.framework.demos.chinook.domain']
 //
 //    launcher {
 //        name = 'chinook-local'
@@ -116,7 +118,8 @@ task runRmi(type: JavaExec) {
 jlink {
     imageName = "chinook-remote" + "-" + project.version
     configuration = 'runtimeRemote'
-    options = ['--bind-services', '--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages', '--add-modules',
+               'is.codion.framework.db.rmi,is.codion.plugin.logback.proxy']
 
     launcher {
         name = 'chinook-rmi'
