@@ -45,7 +45,9 @@ distributions {
 }
 
 jlink {
-    options = ['--bind-services', '--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages', '--add-modules',
+               'is.codion.framework.db.local,is.codion.dbms.h2database,is.codion.plugin.hikari.pool,' +
+                       'is.codion.plugin.logback.proxy,is.codion.framework.demos.chinook.domain']
 
     imageName = project.name + "-" + project.version
 
